--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -11,7 +11,9 @@
     ],
     "dependencies": {
         "@bot-whatsapp/bot": "*",
-        "qr-image": "^3.2.0"
+        "body-parser": "^1.20.1",
+        "polka": "^0.5.2",
+        "serve-static": "^1.13.1"
     },
     "exports": {
         "./mock": "./lib/mock/index.cjs",
