Revert "fix(provider): :bug: create static site html qr"
This reverts commit c7e56a4b13c8829f91769eeca7f1f6b3473f68cf.

--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -11,9 +11,7 @@
     ],
     "dependencies": {
         "@bot-whatsapp/bot": "*",
-        "body-parser": "^1.20.1",
-        "polka": "^0.5.2",
-        "serve-static": "^1.13.1"
+        "qr-image": "^3.2.0"
     },
     "exports": {
         "./mock": "./lib/mock/index.cjs",
