--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -11,6 +11,7 @@
     ],
     "dependencies": {
         "@bot-whatsapp/bot": "*",
+        "combine-image": "^1.0.3",
         "qr-image": "^3.2.0"
     },
     "exports": {
