fix: fix del db provider mysql
Se pusieron correctamente los datos de mysql en app.js y packaje.json

--- a/starters/apps/base-bailey-mysql/package.json
+++ b/starters/apps/base-bailey-mysql/package.json
@@ -14,7 +14,8 @@
         "@bot-whatsapp/bot": "latest",
         "@bot-whatsapp/cli": "latest",
         "@bot-whatsapp/database": "latest",
-        "@bot-whatsapp/provider": "latest"
+        "@bot-whatsapp/provider": "latest",
+        "mysql2": "^2.3.3"
     },
     "author": "",
     "license": "ISC"
