--- a/starters/apps/base-wweb-mongo/package.json
+++ b/starters/apps/base-wweb-mongo/package.json
@@ -13,7 +13,9 @@
         "@bot-whatsapp/bot": "latest",
         "@bot-whatsapp/cli": "latest",
         "@bot-whatsapp/database": "latest",
-        "@bot-whatsapp/provider": "latest"
+        "@bot-whatsapp/provider": "latest",
+        "mime-types": "^2.1.35",
+        "mongodb": "^4.12.1"
     },
     "author": "",
     "license": "ISC"
