docs(starters): :memo: updated doc

--- a/starters/apps/base-bailey-memory/package.json
+++ b/starters/apps/base-bailey-memory/package.json
@@ -9,12 +9,12 @@
     },
     "keywords": [],
     "dependencies": {
-        "@adiwajshing/baileys": "^4.4.0",
-        "mime-types": "^2.1.35",
         "@bot-whatsapp/bot": "latest",
         "@bot-whatsapp/cli": "latest",
         "@bot-whatsapp/database": "latest",
-        "@bot-whatsapp/provider": "latest"
+        "@bot-whatsapp/provider": "latest",
+        "@adiwajshing/baileys": "^4.4.0",
+        "mime-types": "^2.1.35"
     },
     "author": "",
     "license": "ISC"
