--- a/starters/apps/base-bailey-memory/package.json
+++ b/starters/apps/base-bailey-memory/package.json
@@ -14,7 +14,8 @@
         "@bot-whatsapp/database": "latest",
         "@bot-whatsapp/provider": "latest",
         "@adiwajshing/baileys": "^4.4.0",
-        "mime-types": "^2.1.35"
+        "mime-types": "^2.1.35",
+        "wa-sticker-formatter": "^4.3.2"
     },
     "author": "",
     "license": "ISC"
