--- a/starters/apps/base-bailey-mongo/package.json
+++ b/starters/apps/base-bailey-mongo/package.json
@@ -15,7 +15,8 @@
         "@bot-whatsapp/provider": "latest",
         "@adiwajshing/baileys": "^4.4.0",
         "mime-types": "^2.1.35",
-        "mongodb": "^4.12.1"
+        "mongodb": "^4.12.1",
+        "wa-sticker-formatter": "^4.3.2"
     },
     "author": "",
     "license": "ISC"
