--- a/starters/apps/base-bailey-mysql/package.json
+++ b/starters/apps/base-bailey-mysql/package.json
@@ -15,7 +15,8 @@
         "@bot-whatsapp/provider": "latest",
         "@adiwajshing/baileys": "^4.4.0",
         "mime-types": "^2.1.35",
-        "mysql2": "^2.3.3"
+        "mysql2": "^2.3.3",
+        "wa-sticker-formatter": "^4.3.2"
     },
     "author": "",
     "license": "ISC"
