--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "exceljs": "^4.3.0",
     "express": "^4.18.1",
     "file-type": "^17.1.6",
+    "googleapis": "^109.0.1",
     "mime-db": "^1.52.0",
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
@@ -44,7 +45,7 @@
     "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.5.1",
     "stormdb": "^0.6.0",
-    "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#fix-buttons-list",
+    "whatsapp-web.js": "^1.18.4",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
