docs: :fire: added netlify

--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -38,6 +38,8 @@ jobs:
 
     build:
         runs-on: ubuntu-18.04
+        needs:
+            - build-documentation
         steps:
             - uses: actions/checkout@v2
 
