docs(contributing): :zap: new section by contributors

--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -37,6 +37,7 @@ jobs:
                   path: |
                       packages/docs/dist
                       packages/docs/netlify.toml
+                      packages/docs/.netlify
     ############ DEPLOY  ############
     deploy:
         runs-on: ubuntu-18.04
@@ -51,6 +52,7 @@ jobs:
                   path: |
                       packages/docs/dist
                       packages/docs/netlify.toml
+                      packages/docs/.netlify
 
             - name: Deploy to Netlify
               uses: nwtgck/actions-netlify@v1.2
