docs(contributing): :zap: new section by contributors

--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -5,6 +5,10 @@ on:
         branches:
             - 'feat/docs-**'
             - 'fix/docs-**'
+    push:
+        branches:
+            - 'feat/docs-**'
+            - 'fix/docs-**'
 
 jobs:
     ############ DOCUMENTATION BUILD ############
