--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -63,6 +63,6 @@ jobs:
               uses: netlify/actions/cli@master
               env:
                   NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-                  NETLIFY_SITE_ID: ${{ secrets.DEV_NETLIFY_SITE_ID }}
+                  NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
               with:
-                  args: deploy --context packages/docs/netlify.toml --build
+                  args: deploy --context packages/docs/netlify.toml --build --site ${{ secrets.NETLIFY_SITE_ID }}
