--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -37,5 +37,6 @@ jobs:
 
             - name: Build and Deploy
               run: |
+                  VITE_GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
                   cd packages/docs
                   netlify deploy --build --site ${{ secrets.NETLIFY_SITE_ID }} --auth ${{ secrets.NETLIFY_AUTH_TOKEN }}
