--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,9 @@
 name: 🤪 Build and Test
 
 on:
+    push:
+        branches:
+            - dev
     pull_request:
         branches:
             - dev
