--- a/starters/apps/base-baileys-memory/package.json
+++ b/starters/apps/base-baileys-memory/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "bot-whatsapp-base-bailey-mongo",
+    "name": "bot-whatsapp-base-bailey-memory",
     "version": "1.0.0",
     "description": "",
     "main": "app.js",
     "scripts": {
-        "pre-copy": "cd .. && yarn run copy.lib base-bailey-mongo",
+        "pre-copy": "cd .. && yarn run copy.lib base-baileys-memory",
         "start": "node app.js"
     },
     "keywords": [],
@@ -13,10 +13,9 @@
         "@bot-whatsapp/cli": "latest",
         "@bot-whatsapp/database": "latest",
         "@bot-whatsapp/provider": "latest",
-        "@adiwajshing/baileys": "^4.4.0",
-        "mime-types": "^2.1.35",
-        "mongodb": "^4.12.1",
-        "wa-sticker-formatter": "^4.3.2"
+        "@adiwajshing/baileys": "5.0.0",
+        "mime-types": "2.1.35",
+        "wa-sticker-formatter": "4.3.2"
     },
     "author": "",
     "license": "ISC"
