ci(provider): :sparkles: automatic updated versions

--- a/.github/workflows/check-providers.yml
+++ b/.github/workflows/check-providers.yml
@@ -47,4 +47,4 @@ jobs:
 
             - uses: stefanzweifel/git-auto-commit-action@v4
               with:
-                commit_message: "ci(providers): updated versions providers"
+                  commit_message: 'ci(providers): updated versions providers'
