--- a/.github/workflows/check-provider-major.yml
+++ b/.github/workflows/check-provider-major.yml
@@ -1,12 +1,8 @@
-name: Rev Providers
+name: Rev Major Providers
 
 on:
-    push:
-        branches:
-            - dev
-    pull_request:
-        branches:
-            - dev
+    schedule:
+        - cron: '0 9 * * *'
 
 jobs:
     check-npm:
@@ -29,20 +25,20 @@ jobs:
               run: yarn install --immutable --network-timeout 300000
 
             - name: Check Baileys
-              run: yarn node ./scripts/checker.js --name=baileys --stable=true
+              run: yarn node ./scripts/checker.js --name=baileys --stable=false
 
             - name: Check Venom
-              run: yarn node ./scripts/checker.js --name=venom --stable=true
+              run: yarn node ./scripts/checker.js --name=venom --stable=false
 
             - name: Check web-whatsapp
-              run: yarn node ./scripts/checker.js --name=web-whatsapp --stable=true
+              run: yarn node ./scripts/checker.js --name=web-whatsapp --stable=false
 
             - name: Check Meta
-              run: yarn node ./scripts/checker.js --name=meta --stable=true
+              run: yarn node ./scripts/checker.js --name=meta --stable=false
 
             - name: Check Twilio
-              run: yarn node ./scripts/checker.js --name=twilio --stable=true
+              run: yarn node ./scripts/checker.js --name=twilio --stable=false
 
             - uses: stefanzweifel/git-auto-commit-action@v4
               with:
-                  commit_message: 'ci(providers): 👍 updated versions stable providers'
+                  commit_message: 'ci(providers): 🚩 Check BREAKING CHANGE'
