feat(bot): :zap: rev-03 everything work fine

--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -12,7 +12,8 @@
     "dependencies": {
         "@bot-whatsapp/bot": "*",
         "combine-image": "^1.0.3",
-        "qr-image": "^3.2.0"
+        "qr-image": "^3.2.0",
+        "rimraf": "^3.0.2"
     },
     "exports": {
         "./mock": "./lib/mock/index.cjs",
