--- a/.github/workflows/releases-dev.yml
+++ b/.github/workflows/releases-dev.yml
@@ -48,3 +48,4 @@ jobs:
               uses: stefanzweifel/git-auto-commit-action@v4
               with:
                   commit_message: 'ci(version): :zap: automatic - "${date}" updated versions every packages'
+                  branch: dev
