chore(bot): :zap: launch

--- a/.github/workflows/contributors.yml
+++ b/.github/workflows/contributors.yml
@@ -1,5 +1,8 @@
 name: Revisando Colaboradores
 on:
+    push:
+        branches:
+            - main
     pull_request:
         branches:
             - dev
