--- a/.github/workflows/releases-dev.yml
+++ b/.github/workflows/releases-dev.yml
@@ -27,7 +27,7 @@ jobs:
               run: yarn install --immutable --network-timeout 300000
 
             - name: Build Package
-              run: yarn build
+              run: yarn build:full
 
             - name: Release @bot-whatsapp/bot
               run: yarn node ./scripts/release.js --name=bot --version=  --token="${{ secrets.NPM_TOKEN }}"
