--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -31,7 +31,7 @@ jobs:
               run: yarn install --immutable --network-timeout 300000
 
             - name: Build Package
-              run: yarn build
+              run: yarn build:full
 
             - name: Release @bot-whatsapp/bot
               run: yarn node ./scripts/release.js --name=bot --version="${{ steps.vars.outputs.tag }}" --token="${{ secrets.NPM_TOKEN }}"
