--- a/packages/portal/package.json
+++ b/packages/portal/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@bot-whatsapp/portal",
-    "version": "0.0.1-alpha.0",
+    "version": "0.0.2-alpha.0",
     "description": "Portal WEB para escanear QR",
     "main": "./lib/portal.http.cjs",
     "scripts": {
@@ -44,5 +44,9 @@
         "kleur": "^4.1.5",
         "polka": "^0.5.2",
         "serve-static": "^1.13.1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/codigoencasa/bot-whatsapp/tree/main/packages/portal"
     }
 }
