--- a/.github/workflows/releases-dev.yml
+++ b/.github/workflows/releases-dev.yml
@@ -44,6 +44,9 @@ jobs:
             - name: Release @bot-whatsapp/provider
               run: yarn node ./scripts/release.js --name=provider --version=  --token="${{ secrets.NPM_TOKEN }}"
 
+            - name: Release @bot-whatsapp/portal
+              run: yarn node ./scripts/release.js --name=portal --version=  --token="${{ secrets.NPM_TOKEN }}"
+
             - name: Commit Versioning & Push changes
               uses: stefanzweifel/git-auto-commit-action@v4
               with:
