ci: :zap: change set commit

--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -51,6 +51,9 @@ jobs:
             - name: Release @bot-whatsapp/portal
               run: yarn node ./scripts/release.js --name=portal --version="${{ steps.vars.outputs.tag }}" --token="${{ secrets.NPM_TOKEN }}"
 
+            - name: Set User
+              run: git config --global user.email "leifer.contacto@gmail.com" && git config --global user.name "Leifer Mendez"
+
             - name: Set CHANGELOG
               run: yarn release
 
