ci: :zap: push tag pre-

--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -3,7 +3,7 @@ name: 🚀⚡ Liberando versiones
 on:
     push:
         tags:
-            - 'v*.*.*'
+            - 'pre-v*.*.*'
 
 jobs:
     ############ RELEASE ############
