ci: :zap: change set commit

--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -1,10 +1,8 @@
 name: 🚀⚡ Liberando versiones
 
 on:
-    push:
-        tags:
-            - 'pre-v*.*.*'
-
+    release:
+        types: [created]
 jobs:
     ############ RELEASE ############
     release:
