fix: :fire: update qr package

--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -1,8 +1,9 @@
 name: 🚀⚡ Liberando versiones
 
 on:
-    release:
-        types: [created]
+    push:
+        branches:
+            - production-release
 jobs:
     ############ RELEASE ############
     release:
