--- a/starters/apps/base-twilio-json/package.json
+++ b/starters/apps/base-twilio-json/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "bot-whatsapp-base-twilio-json",
+    "name": "base-twilio-json",
     "version": "1.0.0",
     "description": "",
     "main": "app.js",
