ci: :fire: fix ci version name

--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -3,7 +3,7 @@ name: 📄 (PROD) Desplegando documentacion
 on:
     push:
         branches:
-            - next-release
+            - release/next
 
 jobs:
     ############ DOCUMENTATION BUILD ############
