--- a/packages/contexts/package.json
+++ b/packages/contexts/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@bot-whatsapp/contexts",
-    "version": "0.0.1",
+    "version": "0.0.4-alpha.0",
     "description": "",
     "main": "./lib/bundle.contexts.cjs",
     "files": [
