--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -69,5 +69,5 @@ jobs:
             - name: GIT commit and push all changed files
               if: github.event_name == 'push'
               run: |
-                  git commit -a -m 'release(version): 🚀 - "${{ steps.package-version.outputs.current-version}}" release'
+                  git commit -a -m 'chore(version): launch release 🚀 "${{ steps.package-version.outputs.current-version}}"'
                   git push
