ci: :fire: fix github action

--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
     ############ DOCUMENTATION BUILD ############
-    build-documentation:
+    build-documentation-prod:
         name: Build Package
         runs-on: ubuntu-latest
 
