--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -67,8 +67,9 @@ jobs:
             - name: Release Github
               run: yarn node ./scripts/github.js --version="${{ steps.package-version.outputs.current-version}}" --token="${{ secrets.OCTO_TOKEN }}"
 
-            - name: GIT commit and push all changed files
+            - name: Commit Versioning & Push changes
               if: github.event_name == 'push'
-              run: |
-                  git commit -a -m 'chore(version): launch release 🚀 "${{ steps.package-version.outputs.current-version}}"'
-                  git push origin dev
+              uses: stefanzweifel/git-auto-commit-action@v4
+              with:
+                  commit_message: 'chore(version): launch release 🚀 "${{ steps.package-version.outputs.current-version}}"'
+                  branch: dev
