--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -67,6 +67,12 @@ jobs:
             - name: Release Github
               run: yarn node ./scripts/github.js --version="${{ steps.package-version.outputs.current-version}}" --token="${{ secrets.OCTO_TOKEN }}"
 
+            - name: 'Run if changes have been detected'
+              if: steps.auto-commit-action.outputs.changes_detected == 'true'
+              run: |
+                  git add .
+                  git commit -m "chore(version): pre release"
+
             - name: Commit Versioning & Push changes
               if: github.event_name == 'push'
               uses: stefanzweifel/git-auto-commit-action@v4
