fix(cli): :zap: refactor

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,7 +97,7 @@ jobs:
                   git config --local user.email 'action@github.com'
                   git config --local user.name 'GitHub Action'
                   git add .
-                  git commit -m 'major'
+                  git commit -m '"${{ github.event.head_commit.message }}"'
 
             - name: Push changes
               uses: ad-m/github-push-action@master
