fix(cli): :zap: refactor

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,7 +106,7 @@ jobs:
                   git config --local user.email 'action@github.com'
                   git config --local user.name 'GitHub Action'
                   git add .
-                  git commit -m '"${{ steps.vars.outputs.commit }}"'
+                  git commit -m "${{ steps.vars.outputs.commit }}"
 
             - name: Push changes
               uses: ad-m/github-push-action@master
