--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,8 +103,8 @@ jobs:
 
             - name: Add and commit changes to gh-pages branch
               run: |
-                  git config --local user.email 'action@github.com'
-                  git config --local user.name 'GitHub Action'
+                  git config --globa user.email 'action@github.com'
+                  git config --globa user.name 'GitHub Action'
                   git add packages/provider
                   git add starters/apps
                   git pull origin feature/providers-major
